Solved -- To Top button overlaps information

--- a/templates/cassiopeia/scss/blocks/_back-to-top.scss
+++ b/templates/cassiopeia/scss/blocks/_back-to-top.scss
@@ -3,7 +3,7 @@
 */
 
 .back-to-top-link {
-  position: fixed;
+  position: absolute;
   right: 1rem;
   bottom: 1rem;
   z-index: 10000;
